# airhockey

./: .gitignore  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  README.md  benchmark.py  hello.py  main.py  optimized_config.py  pyproject.toml  recorder.py  test_multi_mallet.py  train_optimized.py
checkpoints/: checkpoint_ep100.pt  checkpoint_ep1000.pt  checkpoint_ep200.pt  checkpoint_ep300.pt  checkpoint_ep400.pt  checkpoint_ep500.pt  checkpoint_ep600.pt  checkpoint_ep700.pt  checkpoint_ep800.pt  checkpoint_ep900.pt
src/: .gitignore  config.py  env.py  hparam_opt.py  render.py  replay_buffer.py  train.py  utils.py
src/agents/: __init__.py  base.py  dqn.py  dqn.py.bak.20250808T142342  dueling_dqn.py  sac.py
src/airhockey.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
