[project]
name = "airhockey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.1",
    "pygame>=2.6.1",
    "numpy>=2.1.3",
    "rich>=13.9.4",
    "imageio-ffmpeg>=0.5.1",
    "imageio>=2.36.1",
    "psutil>=5.9.0",
]
